--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -12,7 +12,7 @@
         android:id="@+id/mainMenuCaption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select drone type" />
+        android:text="@+string/SelectFlightMode" />
 
     <ListView
         android:id="@+id/droneTypes"
