--- a/res/layout/input_box.xml
+++ b/res/layout/input_box.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"  >
     
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/captionLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Caption"
@@ -49,7 +49,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel" />
+        android:text="@+string/Cancel" />
 	</LinearLayout>
 
     </LinearLayout>
