--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -258,7 +258,7 @@
                         android:editable="false"
                         android:enabled="true"
                         android:hint="@+string/AltitudeM"
-                        android:inputType="number"
+                        android:inputType="none"
                         android:padding="0sp"
                         android:shadowColor="@android:color/white"
                         android:shadowRadius="2"
@@ -289,7 +289,7 @@
                         android:layout_height="22sp"
                         android:editable="false"
                         android:hint="@+string/HeadingD"
-                        android:inputType="number"
+                        android:inputType="none"
                         android:padding="0sp"
                         android:shadowColor="@android:color/white"
                         android:shadowRadius="2"
@@ -318,7 +318,7 @@
                         android:layout_height="22sp"
                         android:editable="false"
                         android:hint="@+string/CamAngle"
-                        android:inputType="number"
+                        android:inputType="none"
                         android:padding="0sp"
                         android:shadowColor="@android:color/white"
                         android:shadowRadius="2"
