--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -14,36 +14,28 @@
 
         <LinearLayout
             android:id="@+id/linearLayoutLeft1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.75"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
             android:baselineAligned="false"
             android:orientation="vertical" >
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.15"
-                android:orientation="vertical" >
-
-                <ListView
-                    android:id="@+id/routes"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent" >
-                </ListView>
-            </LinearLayout>
+            <ListView
+                android:id="@+id/routes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+            </ListView>
 
             <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.85"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:orientation="horizontal" >
 
                 <Button
                     android:id="@+id/routeAdd"
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:onClick="OnAddRoute"
                     android:padding="0dp"
                     android:text="+" />
@@ -51,8 +43,8 @@
                 <Button
                     android:id="@+id/routeDel"
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:onClick="OnDelRoute"
                     android:padding="0dp"
                     android:text="-" />
@@ -60,8 +52,8 @@
                 <Button
                     android:id="@+id/routeEdit"
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:onClick="OnEditRoute"
                     android:padding="0dp"
                     android:text="@+string/Edit" />
@@ -70,24 +62,23 @@
 
         <LinearLayout
             android:id="@+id/linearLayoutRight1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.25"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical" >
 
             <FrameLayout
                 android:id="@+id/mapSurface"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.15" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
             </FrameLayout>
 
             <LinearLayout
                 android:id="@+id/routeControl"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="50dp"
                 android:layout_gravity="bottom"
-                android:layout_weight="0.85"
                 android:gravity="center"
                 android:orientation="horizontal" >
 
@@ -138,29 +129,27 @@
 
         <Space
             android:id="@+id/spaceLeft1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.75" />
+            android:layout_width="150dp"
+            android:layout_height="fill_parent"/>
 
         <LinearLayout
             android:id="@+id/linearLayoutLeft4"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.25"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical" >
 
             <com.my.fly.RouteView
                 android:id="@+id/routeView"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.15"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:textColor="#ffffff" />
 
             <Space
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.85" />
+                android:layout_height="50dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -200,15 +189,15 @@
 
         <Space
             android:id="@+id/spaceLeft2"
-            android:layout_width="fill_parent"
+            android:layout_width="150dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.75" />
+            />
 
         <LinearLayout
             android:id="@+id/linearLayoutRight2"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.25"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:baselineAligned="false"
             android:orientation="vertical" >
 
@@ -264,7 +253,6 @@
                         android:shadowRadius="2"
                         android:textColor="@android:color/black"
                         android:textSize="10sp" >
-
                     </EditText>
 
                     <Space
@@ -359,8 +347,8 @@
 
             <Space
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.85" />
+                android:layout_height="50dp"
+                />
         </LinearLayout>
     </LinearLayout>
 
