Added map view window sizeincreasing in flight time

--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -188,7 +188,7 @@
         android:orientation="horizontal" >
 
         <Space
-            android:id="@+id/leftCOlumn3"
+            android:id="@+id/leftColumn3"
             android:layout_width="150dp"
             android:layout_height="fill_parent"
             />
