--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -122,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="OnMediaSync"
-                    android:src="@android:drawable/ic_menu_refresh" />
+                    android:src="@android:drawable/ic_menu_rotate" />
 
             </LinearLayout>
         </LinearLayout>
